--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "less": "^4.2.2",
     "vitepress": "^1.6.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
