fix: serval bugs

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,5 @@
 {
     "recommendations": [
-        "esbenp.prettier-vscode",
-        "xlthu.pangu-markdown",
-        "yzhang.markdown-all-in-one"
+        "dbaeumer.vscode-eslint",
     ]
 }
