--- a/.github/workflows/Deploy_to_vercel.yml
+++ b/.github/workflows/Deploy_to_vercel.yml
@@ -12,23 +12,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: '9.8.0'
-      - name: Install Dependencies
-        run: pnpm install
-      - name: Build
-        run: pnpm build
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
+        uses: amondnet/vercel-action@master
+        env:
+            VERSION: ${{ env.GITHUB_SHA }}
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-org-id: ${{ secrets.ORG_ID}}
+          vercel-project-id: ${{ secrets.PROJECT_ID}}
           working-directory: ./
+          vercel-args: '--prod' # 可不填
